--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "stx-test-cli",
+  "name": "substx",
   "version": "0.1.0",
+  "description": "Decentralized newsletter service built on Stacks platform",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stacks/connect": "^6.0.0",
     "core-js": "^3.15.1",
     "vue": "^3.1.2"
   },
@@ -18,6 +20,7 @@
     "@vue/compiler-sfc": "^3.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.12.1"
+    "eslint-plugin-vue": "^7.12.1",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   }
 }
