added stacks storage capacity and cleaned up code

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@stacks/connect": "^6.0.0",
+    "@stacks/storage": "^2.0.0-beta.1",
     "core-js": "^3.15.2",
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2",
     "vue": "^3.1.4",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
