--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@stacks/connect": "^6.0.0",
     "@stacks/storage": "^2.0.0-beta.1",
+    "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.15.2",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2",
     "vue": "^3.1.4",
     "vue-router": "^4.0.10",
+    "vue3-tabs-component": "^1.0.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
